# MobiClaw

./: .env  .env-example  .gitignore  .gitmodules  README.md  app.py  env.md  pyproject.toml
.claude/skills/setup/: SKILL.md
apps/android/: .gitignore  README.md  gradlew  gradlew.bat  settings.gradle
apps/android/app/: build.gradle  proguard-rules.pro
apps/android/app/src/main/: AndroidManifest.xml
apps/android/gradle/wrapper/: gradle-wrapper.properties
backup/: custom_agents_export.json  knowledge_bases_export.json  models_export.json  tenants_export.json  users_export.json
configs/: custom_agent_export.json  custom_agents_export.json  knowledge_bases_export.json  models_export.json  tenants_export.json  users_export.json
docs/: MobiClaw-改进路线图.md  MobiClaw-简化架构图.md  MobiClaw-详细架构图.md  MobiClaw-详细项目分析与拆解.md  MobiClaw-项目架构说明.md  Seneschal-改进路线图.md  Seneschal-简化架构图.md  Seneschal-详细架构图.md  Seneschal-详细项目分析与拆解.md  Seneschal-项目架构说明.md  模块-dailytasks.md  模块-gateway.md  模块-memory.md  模块-mobiclaw-core.md  模块-seneschal-core.md  模块-tools.md
docs/superpowers/plans/: 2026-03-18-cli.md
docs/superpowers/specs/: 2026-03-18-cli-design.md
mobiagent_server/: __init__.py  server.py
mobiclaw/: __init__.py  config.py  run_context.py  tools.py  workflows.py
mobiclaw/agents/: __init__.py  catalog.py  common.py  custom.py  factories.py  factories_router.py  factories_steward_chat_user.py  factories_worker.py  types.py
mobiclaw/cli/: __init__.py  __main__.py  chat.py  config.py  device.py  env.py  feishu.py  file.py  http_client.py  main.py  mcp.py  output.py  schedule.py  session.py  task.py
mobiclaw/dailytasks/: __init__.py  runner.py
mobiclaw/dailytasks/tasks/: tasks.json
mobiclaw/gateway_server/: README.md  __init__.py  __main__.py  api.py  api_env.py  devices.py  env.py  events.py  feishu.py  models.py  runtime.py  session.py
mobiclaw/mcp/: __init__.py  manager.py
mobiclaw/mobile/: RUNNER_README.md  __init__.py  config.json  config.py  run.py  types.py
mobiclaw/mobile/examples/: run_qwen.sh  run_single_mobiagent_no_planning.sh  run_uitars_batch.sh
mobiclaw/mobile/providers/: __init__.py
mobiclaw/mobile/providers/autoglm/: __init__.py  action_parser.py  autoglm_task.py
mobiclaw/mobile/providers/mobiagent/: .env.example  load_md_prompt.py
mobiclaw/mobile/providers/qwen/: prompts.py  qwen_task.py
mobiclaw/mobile/providers/uitars/: ui_tars_helper.py  uitars_task.py
mobiclaw/orchestrator/: README.md  __init__.py  execution.py  routing.py  runner.py  skills.py  types.py  utils.py
mobiclaw/scheduler/: __init__.py  helpers.py  store.py
mobiclaw/session/: __init__.py  manager.py
mobiclaw/skills/mobiagent-task-spec/: SKILL.md
mobiclaw/tools/: __init__.py  decorators.py  feishu.py  file.py  mobi.py  mock_data.py  ocr.py  office.py  papers.py  ppt.py  shell.py  skill_runner.py  web.py
mobiclaw/tools/memory/: __init__.py  long_term_memory.py  rag.py
mobiclaw/webui/: gateway_chat.html  gateway_console.html  gateway_settings.html
scripts/: README.md  bootstrap_one_click.sh  run_gateway_demo.sh  run_gateway_feishu_demo.sh  run_llm_route_timing_test.sh  stop_all.sh  test_mobi_cli_real.sh  weknora_export.sh  weknora_import.sh
seneschal/: __init__.py  agents.py  config.py  env.py  gateway_server.py  orchestrator.py  run_context.py  scheduler.py  tools.py  workflows.py
seneschal/agents/: __init__.py  catalog.py  common.py  custom.py  factories.py  factories_steward_chat_user.py  factories_worker.py  types.py
seneschal/configs/: custom_agent.json
seneschal/dailytasks/: Daily_tasks.md  runner.py
seneschal/gateway_server/: __init__.py  __main__.py  api.py  env.py  events.py  feishu.py  files.py  models.py  runtime.py  session.py
seneschal/mobile/: base_task.py  config.py  device.py  executor.py  interrupts.py  run.py  task_manager.py
seneschal/mobile/examples/: run_autoglm.sh  run_single_mobiagent-e2e.sh  run_single_mobiagent.sh  run_uitars_single.sh
seneschal/mobile/providers/: __init__.py
seneschal/mobile/providers/autoglm/: prompts.py
seneschal/mobile/providers/mobiagent/: __init__.py  mobile_task.py
seneschal/mobile/providers/qwen/: utils.py
seneschal/orchestrator/: __init__.py  execution.py  routing.py  runner.py  skills.py  utils.py
seneschal/scheduler/: __init__.py  detection.py  lifecycle.py  manager.py  models.py  store.py
seneschal/session/: manager.py
seneschal/skills/mobiagent-task-spec/: SKILL.md
seneschal/tools/: __init__.py  feishu.py  file.py  mobi.py  mock_data.py  ocr.py  office.py  papers.py  ppt.py  schedule.py  shell.py  skill_runner.py  web.py  weknora.py  weknora_cache.json
seneschal/tools/memory/: __init__.py  long_term_memory.py  rag.py
seneschal/tools/weknora/: __init__.py  agent.py  base.py  chat.py  chunk.py  evaluation.py  faq.py  knowledge.py  knowledge_base.py  knowledge_search.py  message.py  model.py  session.py  tag.py  tenant.py
seneschal/webui/: gateway_chat.html  gateway_console.html  gateway_settings.html
tests/: conftest.py  test_agents_tool_json_schemas.py  test_agents_vlm_helpers.py  test_chat_session_manager_unit.py  test_chat_session_mode.py  test_cli_chat.py  test_cli_config.py  test_cli_device.py  test_cli_env.py  test_cli_feishu.py  test_cli_file.py  test_cli_http_client.py  test_cli_mcp.py  test_cli_output.py  test_cli_schedule.py  test_cli_session.py  test_cli_task.py  test_download_file_feishu_auth.py  test_feishu_docx_tools.py  test_feishu_history_tools.py  test_feishu_meeting_tools.py  test_gateway_chat_session_api.py  test_gateway_server_core.py  test_llm_route_timing.py  test_markdown_file_tool.py  test_mobi_tools_local_executor.py  test_mobiagent_provider_connectivity.py  test_mobile_executor_config.py  test_mobile_executor_core.py  test_mobile_interrupts.py  test_ocr_tool.py  test_orchestrator_external_context_guard.py  test_orchestrator_file_handling.py  test_run_context.py  test_shell_tool.py  test_skill_runner.py  test_steward_mobi_output_dir_binding.py  test_steward_mobi_retry_logic.py  test_workflows_plan_helpers.py
(+17 files in other folders)
