[project]
name = "seneschal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a==0.44",
    "a2a-sdk==0.3.22",
    "accessible-pygments==0.0.5",
    "agentscope",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aioitertools==0.13.0",
    "aiosignal==1.4.0",
    "aiosqlite==0.22.1",
    "alabaster==1.0.0",
    "alibabacloud-credentials==1.0.7",
    "alibabacloud-credentials-api==1.0.0",
    "alibabacloud-darabonba-array==0.1.0",
    "alibabacloud-darabonba-encode-util==0.0.2",
    "alibabacloud-darabonba-map==0.0.1",
    "alibabacloud-darabonba-signature-util==0.0.4",
    "alibabacloud-darabonba-string==0.0.4",
    "alibabacloud-endpoint-util==0.0.4",
    "alibabacloud-gateway-pop==0.1.3",
    "alibabacloud-gateway-spi==0.0.3",
    "alibabacloud-kms20160120==2.4.0",
    "alibabacloud-openapi-util==0.2.4",
    "alibabacloud-tea==0.4.3",
    "alibabacloud-tea-openapi==0.4.3",
    "alibabacloud-tea-util==0.3.14",
    "alibabacloud-tea-xml==0.0.3",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anthropic==0.76.0",
    "anyio==4.12.1",
    "apscheduler==3.11.2",
    "attrs==25.4.0",
    "authlib==1.6.6",
    "automat==25.4.16",
    "babel==2.17.0",
    "backoff==2.2.1",
    "bcrypt==5.0.0",
    "beautifulsoup4==4.14.3",
    "bidict==0.23.1",
    "build==1.4.0",
    "cached-property==2.0.1",
    "cachetools==6.2.6",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "cfgv==3.5.0",
    "charset-normalizer==3.4.4",
    "chromadb==1.4.1",
    "click==8.3.1",
    "coloredlogs==15.0.1",
    "constantly==23.10.4",
    "contourpy==1.3.3",
    "cryptography==44.0.3",
    "cssselect==1.3.0",
    "cycler==0.12.1",
    "cyclopts==4.5.1",
    "darabonba-core==1.0.5",
    "dashscope==1.25.9",
    "defusedxml==0.7.1",
    "distlib==0.4.0",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "docstring-parser==0.17.0",
    "docutils==0.22.4",
    "durationpy==0.10",
    "elastic-transport==9.2.1",
    "elasticsearch==9.2.1",
    "email-validator==2.3.0",
    "et-xmlfile==2.0.0",
    "exceptiongroup==1.3.1",
    "fakeredis==2.33.0",
    "fastapi==0.128.0",
    "fastmcp==2.10.6",
    "fastuuid==0.14.0",
    "filelock==3.20.3",
    "flatbuffers==25.12.19",
    "flowllm==0.2.0.10",
    "fonttools==4.61.1",
    "frozenlist==1.8.0",
    "fsspec==2026.1.0",
    "furo==2025.12.19",
    "google-api-core==2.29.0",
    "google-auth==2.48.0",
    "google-genai==1.60.0",
    "googleapis-common-protos==1.72.0",
    "greenlet==3.3.1",
    "grpcio==1.76.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "hf-xet==1.2.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "huggingface-hub==1.3.4",
    "humanfriendly==10.0",
    "hyperframe==6.1.0",
    "hyperlink==21.0.0",
    "identify==2.6.16",
    "idna==3.11",
    "imagesize==1.4.1",
    "importlib-metadata==8.7.1",
    "importlib-resources==6.5.2",
    "incremental==24.11.0",
    "iniconfig==2.3.0",
    "itemadapter==0.13.1",
    "itemloaders==1.3.2",
    "jinja2==3.1.6",
    "jiter==0.12.0",
    "jmespath==1.1.0",
    "joblib==1.5.3",
    "json-repair==0.55.1",
    "json5==0.13.0",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "kiwisolver==1.4.9",
    "kubernetes==35.0.0",
    "litellm==1.81.4",
    "loguru==0.7.3",
    "lxml==6.0.2",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "mcp==1.26.0",
    "mdit-py-plugins==0.5.0",
    "mdurl==0.1.2",
    "mem0ai==0.1.116",
    "milvus-lite==2.5.1",
    "mmh3==5.2.0",
    "mpmath==1.3.0",
    "msgpack==1.1.2",
    "multidict==6.7.1",
    "mysql-connector-python==9.5.0",
    "myst-parser==5.0.0",
    "nacos-sdk-python==3.0.4",
    "nltk==3.9.2",
    "nodeenv==1.10.0",
    "numpy==2.4.1",
    "oauthlib==3.3.1",
    "ollama==0.6.1",
    "onnxruntime==1.23.2",
    "openai==2.16.0",
    "openapi-pydantic==0.5.1",
    "openpyxl==3.1.5",
    "opentelemetry-api==1.39.1",
    "opentelemetry-exporter-otlp==1.39.1",
    "opentelemetry-exporter-otlp-proto-common==1.39.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.39.1",
    "opentelemetry-exporter-otlp-proto-http==1.39.1",
    "opentelemetry-proto==1.39.1",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-semantic-conventions==0.60b1",
    "orjson==3.11.5",
    "overrides==7.7.0",
    "packaging==26.0",
    "pandas==3.0.0",
    "parsel==1.10.0",
    "pathspec==1.0.4",
    "pgvector==0.4.2",
    "pillow==12.1.0",
    "platformdirs==4.5.1",
    "pluggy==1.6.0",
    "portalocker==3.2.0",
    "posthog==5.4.0",
    "pre-commit==4.5.1",
    "propcache==0.4.1",
    "protego==0.5.0",
    "proto-plus==1.27.0",
    "protobuf==5.29.5",
    "psutil==7.2.1",
    "py==1.11.0",
    "pyasn1==0.6.2",
    "pyasn1-modules==0.4.2",
    "pybase64==1.4.3",
    "pycparser==3.0",
    "pycryptodome==3.23.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.12.0",
    "pydispatcher==2.0.7",
    "pyfiglet==1.0.4",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pymilvus==2.6.7",
    "pymongo==4.16.0",
    "pyopenssl==25.1.0",
    "pyparsing==3.3.2",
    "pypdf==6.5.0",
    "pyperclip==1.11.0",
    "pypika==0.50.0",
    "pyproject-hooks==1.2.0",
    "pytest==9.0.2",
    "pytest-forked==1.6.0",
    "python-datauri==3.0.2",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.2.0",
    "python-dotenv==1.2.1",
    "python-engineio==4.13.0",
    "python-frontmatter==1.1.0",
    "python-multipart==0.0.22",
    "python-socketio==5.16.0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "qdrant-client==1.15.1",
    "queuelib==1.8.0",
    "ray==2.53.0",
    "redis==7.1.0",
    "referencing==0.37.0",
    "regex==2026.1.15",
    "reme-ai==0.2.0.6",
    "requests==2.32.5",
    "requests-file==3.0.1",
    "requests-oauthlib==2.0.0",
    "rich==14.3.1",
    "rich-rst==1.3.2",
    "roman-numerals==4.1.0",
    "rpds-py==0.30.0",
    "rsa==4.9.1",
    "safetensors==0.7.0",
    "scrapy==2.14.1",
    "service-identity==24.2.0",
    "setuptools==80.10.2",
    "shellingham==1.5.4",
    "shortuuid==1.0.13",
    "simple-websocket==1.1.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "snowballstemmer==3.0.1",
    "sortedcontainers==2.4.0",
    "sounddevice==0.5.5",
    "soupsieve==2.8.3",
    "sphinx==9.1.0",
    "sphinx-basic-ng==1.0.0b2",
    "sphinx-gallery==0.20.0",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "sqlalchemy==2.0.46",
    "sse-starlette==3.2.0",
    "starlette==0.50.0",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "tavily-python==0.7.19",
    "tenacity==9.1.2",
    "tiktoken==0.12.0",
    "tldextract==5.3.1",
    "tokenizers==0.22.2",
    "tqdm==4.67.1",
    "transformers==5.0.0",
    "twisted==25.5.0",
    "typer==0.21.1",
    "typer-slim==0.21.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzlocal==5.3.1",
    "urllib3==2.6.3",
    "uvicorn==0.40.0",
    "uvloop==0.22.1",
    "virtualenv==20.36.1",
    "w3lib==2.3.1",
    "watchfiles==1.1.1",
    "websocket-client==1.9.0",
    "websockets==15.0.1",
    "wsproto==1.3.2",
    "yarl==1.22.0",
    "zipp==3.23.0",
    "zope-interface==8.2",
]

[tool.uv.workspace]
members = [
    "agentscope",
]

[tool.uv.sources]
agentscope = { workspace = true }
