[project]
name = "mobiclaw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # --- Core agent framework (workspace member) ---
    "agentscope",
    # --- Web server ---
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",   # required for FastAPI UploadFile
    "pydantic",           # directly imported in gateway_server.py
    # --- Scheduling ---
    "apscheduler",
    # --- HTTP client ---
    "requests",
    # --- Messaging integrations ---
    "lark-oapi>=1.4.0",   # Feishu/Lark SDK (lazy-loaded in gateway_server.py)
    # --- Mobile agent (vision) ---
    "pillow",             # PIL.Image used in mobile providers
    # --- Document processing (lazy-imported in tools/) ---
    "pypdf<=6.5.0",       # papers.py; version cap matches agentscope[pdf-reader]
    "openpyxl",           # office.py
    "reportlab",
    "python-pptx>=0.6.23",
    "python-docx",        # office.py  (imported as 'docx')
    # --- RAG / vector store ---
    "qdrant-client==1.15.1",  # agentscope.rag.QdrantStore; pinned to avoid pymilvus conflict
    "nltk",               # agentscope text/PDF/Word readers
    # --- Markdown conversion (CLI tool used in skill_runner tests) ---
    "markitdown",
    # --- Testing ---
    "pytest",
    "pytest-asyncio>=0.24",
    "jsonschema",         # test_agents_tool_json_schemas.py
    "uiautomator2>=3.5.0",
    "hmdriver2>=1.4.4",
]

[project.optional-dependencies]
cli = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "pyyaml>=6.0",
]

[project.scripts]
mobiclaw = "mobiclaw.cli.main:cli"

[tool.uv.workspace]
members = [
    "agentscope",
]

[tool.uv.sources]
agentscope = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
